--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3"
